fix: remove extra margin-top from description in contact section

--- a/styles.css
+++ b/styles.css
@@ -377,7 +377,6 @@ li {
 
 .section-contact-description {
   font-size: 16px;
-  margin-top: 8px;
   text-align: center;
   max-width: 35%;
   margin-top: 15px;
